--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@remix-run/node": "^2.7.1",
     "@remix-run/react": "^2.7.1",
     "@remix-run/serve": "^2.7.1",
-    "@shopify/app-bridge-react": "^4.1.2",
+    "@shopify/app-bridge": "^3.7.10",
+    "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-api": "^11.0.0",
     "@shopify/shopify-app-remix": "^3.0.0",
