--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@shopify/shopify-api": "^11.0.0",
     "@shopify/shopify-app-remix": "^3.0.0",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.0",
+    "@vis.gl/react-google-maps": "^1.4.2",
     "axios": "^1.7.7",
     "eslint-config-react-app": "^7.0.1",
     "isbot": "^5.1.0",
